assets/agenda/custom.css
.link-agenda {
  width: 250px;
}
.icon-agenda {
  padding: 6px;
  border-top-left-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}
.border-grey {
  border-color: #ddd !important;
}
.btn-center {
  left: 48%;
}
.btn-list-left {
  left: -24px;
  top: 65%;
}
.btn-list-right {
  right: -24px;
  top: 65%;
}
.list-jadwal:hover {
  background-color: rgba(235, 242, 247, 0.8);
}
.btn-close {
  color: #f44336 !important;
  cursor: pointer;
  margin: 5px;
}

